@@ -4,8 +4,9 @@ Changelog
 3.2.2 (unreleased)
 ==================
 
-- Nothing changed yet.
-
+- get_day_intervals returns also the break as a slot
+- Fix booking allowed during the lunch break
+  [ale-rt]
 
 3.2.1 (2014-05-12)
 ==================
